<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tVFirma"
        android:text="@string/realice_firma"
        android:textColor="@color/celeste"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/linearLayout"
        android:orientation="horizontal"
        style="@style/LinearLayoutValidarFirma"
        android:layout_margin="20dp"
        android:padding="5dp">

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCorregir"
            android:text="@string/corregir"
            style="@style/BotonesPantallas"
            android:background="@drawable/boton_gris"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAceptar"
            android:text="@string/aceptar"
            style="@style/BotonesPantallas"
            android:background="@drawable/boton_rojo"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</LinearLayout>
