<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgViewLogin"
        android:scaleType="fitXY"
        android:src="@drawable/fondo_login"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:id="@+id/imgViewLogoInnovative"
            android:src="@drawable/logo_innovative"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVDatos"
            android:text="@string/ingrese_datos"
            android:textSize="15sp"
            android:textStyle="normal"
            android:textColor="@color/gris_letra"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imgViewLogoInnovative"
            app:layout_constraintLeft_toLeftOf="@+id/imgViewLogoInnovative"
            app:layout_constraintRight_toRightOf="@+id/imgViewLogoInnovative"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTUsuario"
            android:hint="Usuario"
            android:inputType="text"
            android:drawableLeft="@drawable/usuario"
            android:drawablePadding="10dp"
            style="@style/EditTextLogin"
            app:layout_constraintTop_toBottomOf="@+id/tVDatos"
            app:layout_constraintLeft_toLeftOf="@+id/imgViewLogoInnovative"
            app:layout_constraintRight_toRightOf="@+id/imgViewLogoInnovative"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eTPassword"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/contrasena"
            android:drawablePadding="10dp"
            style="@style/EditTextLogin"
            app:layout_constraintTop_toBottomOf="@+id/eTUsuario"
            app:layout_constraintLeft_toLeftOf="@+id/imgViewLogoInnovative"
            app:layout_constraintRight_toRightOf="@+id/imgViewLogoInnovative"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnIngresar"
            android:text="@string/ingresar"
            style="@style/BotonesPantallas"
            android:background="@drawable/boton_gris"
            android:enabled="true"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/eTPassword"
            app:layout_constraintLeft_toLeftOf="@+id/imgViewLogoInnovative"
            app:layout_constraintRight_toRightOf="@+id/imgViewLogoInnovative"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tVPreguntas"
            android:text="@string/preguntas_frecuentes"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@+id/btnIngresar"
            app:layout_constraintLeft_toLeftOf="@+id/imgViewLogoInnovative"
            app:layout_constraintRight_toRightOf="@+id/imgViewLogoInnovative"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
